[tool.poetry]
name = "icon-processor"
version = "0.1.0"
description = ""
authors = ["Matt Ashpole <m.d.ashpole@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[tool.ruff]
fix = true
unsafe-fixes = false

line-length = 100

[tool.ruff.lint]
select = ["E", "F", "R", "W", "I", "N", "D", "C", "PERF", "FURB", "RUF"]
ignore = ["D417", "RUF012"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
